# surreal_db_semantic_search

./: Cargo.toml  README.md
src/: error.rs  main.rs  models.rs
