[package]
name = "file-embeddings"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full", "macros", "rt-multi-thread"] }
surrealdb = { version = "1.2.0", features = ["kv-rocksdb"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2.0"
async-trait = "0.1"
fastembed = "4.3.0"
thiserror = "2.0.3"
pdf-extract = "0.7.10"
dirs = "5.0.1"
tempfile = "3.14.0"
